--- a/src/test/resources/browsers.setting.properties
+++ b/src/test/resources/browsers.setting.properties
@@ -21,7 +21,7 @@ arguments=["--no-sandbox","--window-size=1280,1024"]
 [firefox.local]
 mode=Local
 driver=Firefox
-executable=src/test/resources/drivers/win/geckodriver.exe
+#executable=src/test/resources/drivers/win/geckodriver.exe
 
 
 ##################################===REMOTE===##############################
