--- a/src/test/resources/profiles/default.properties
+++ b/src/test/resources/profiles/default.properties
@@ -1,2 +1,5 @@
 #AUT TESSTING
-profile.url=https://trello.com/login
+#profile.url=https://trello.com/login
+profile.url=https://www.qa.jpay.com/
+profile.urlFacility=https://facility.qa.jpay.com
+profile.urlStaging=https://staging.qa.jpay.com
