--- a/src/test/resources/reportportal.properties
+++ b/src/test/resources/reportportal.properties
@@ -1,5 +1,10 @@
-rp.endpoint = http://192.168.191.249:8080
-rp.uuid = 9e9b8d40-c204-46ab-8132-bbf84ca93aa7
+#rp.endpoint = http://192.168.191.249:8080
+#rp.uuid = 9e9b8d40-c204-46ab-8132-bbf84ca93aa7
+#rp.launch = SeleniumBase
+#rp.project = superadmin_personal
+#rp.enable = true
+rp.endpoint = http://101.99.24.11:6868
+rp.uuid = 70e3f221-5f2c-4483-8a7c-e811a1ca995f
 rp.launch = SeleniumBase
-rp.project = superadmin_personal
+rp.project = selenium
 rp.enable = false
